--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="nuvvostanante nenodanata.html"target="self"><img src="nuvvostanante nendantana copy.jpg"width="180"height="80%"><title> NuvvostananteNenodantana</title></a>
             </td>
             <td>
-            <a href="jalsa.html"target="self"><img src="jalsa.jpeg"><title>jalsa</title>jalsa</a>
+            <a href="jalsa.html"target="self"><img src="jalsa.jpeg"><title>jalsa</title></a>
             </td>
             <td>
             <a href="shyam singaroy.html"target="self"><img src="shyam singaroy.jpeg"><title>Shyam Singa Roy</title> </a>
